--- a/models/sources.yml
+++ b/models/sources.yml
@@ -423,3 +423,38 @@ sources:
     tables:
       - name: blocks_completeness
       - name: transactions_completeness
+  - name: aurora_observ
+    database: aurora
+    schema: silver_observability
+    tables:
+      - name: blocks_completeness
+      - name: logs_completeness
+      - name: receipts_completeness
+      - name: transactions_completeness
+  - name: bitcoin_observ
+    database: bitcoin
+    schema: silver_observability
+    tables:
+      - name: blocks_completeness
+      - name: inputs_completeness
+      - name: outputs_completeness
+      - name: txs_completeness
+  - name: flow_observ
+    database: flow
+    schema: silver_observability
+    tables:
+      - name: blocks_completeness
+      - name: txs_completeness
+  - name: near_observ
+    database: near
+    schema: silver_observability
+    tables: 
+      - name: blocks_completeness
+      - name: chunks_completeness
+      - name: logs_completeness
+  - name: solana_observ
+    database: solana
+    schema: silver_observability
+    tables: 
+      - name: blocks_completeness
+      - name: transactions_completeness
