--- a/.github/workflows/dbt_dev_activity_yearly.yml
+++ b/.github/workflows/dbt_dev_activity_yearly.yml
@@ -1,10 +1,10 @@
-name: dbt_near_dev_activity
-run-name: dbt_near_dev_activity
+name: dbt_dev_activity_yearly
+run-name: dbt_dev_activity_yearly
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "10 * * * 0"
+    - cron: "0 0 1 1 *" # At 00:00 on day-of-month 1 in January
 
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
@@ -22,7 +22,7 @@ jobs:
   called_workflow_template:
     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
-      dbt_command: dbt run-operation get_github_repo_data --vars 'GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}, frequency: ["daily", "weekly"]'
+      dbt_command: dbt run-operation get_github_repo_data --vars "{GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}, frequency: ['last_year']}"
       environment: workflow_prod
       warehouse: ${{ vars.WAREHOUSE }}
     secrets: inherit
