--- a/models/sources.yml
+++ b/models/sources.yml
@@ -185,7 +185,7 @@ sources:
   - name: osmosis_silver
     database: osmosis
     schema: silver
-    tables: 
+    tables:
       - name: transactions
       - name: asset_metadata
       - name: prices_swaps
@@ -230,7 +230,7 @@ sources:
   - name: bronze
     database: crosschain
     schema: bronze
-    tables: 
+    tables:
       - name: address_labels
       - name: data_science_uploads
       - name: legacy_prices
@@ -239,7 +239,7 @@ sources:
   - name: bronze_dev
     database: crosschain_dev
     schema: bronze
-    tables: 
+    tables:
       - name: address_labels
       - name: data_science_uploads
       - name: legacy_prices
@@ -399,3 +399,7 @@ sources:
       - name: receipts_completeness
       - name: traces_completeness
       - name: transactions_completeness
+  - name: github_activity
+    schema: bronze_api
+    tables:
+      - name: github_repo_data
