--- a/.github/workflows/dbt_dev_activity_daily_weekly.yml
+++ b/.github/workflows/dbt_dev_activity_daily_weekly.yml
@@ -37,3 +37,4 @@ jobs:
       - name: Run DBT Jobs
         run: |
           dbt run-operation get_github_repo_data --args "{GITHUB_TOKEN: '${{ secrets.GB_TOKEN }}', frequency: ['daily', 'weekly']}"
+          dbt run --model silver__github_activity
