--- a/.github/workflows/dbt_dev_activity_yearly.yml
+++ b/.github/workflows/dbt_dev_activity_yearly.yml
@@ -36,5 +36,5 @@ jobs:
 
       - name: Run DBT Jobs
         run: |
-          dbt run-operation get_github_repo_data --args "{GITHUB_TOKEN: '${{ secrets.GB_TOKEN }}', frequency: ['last_year']}"
+          dbt run-operation get_github_repo_data --args "{GITHUB_TOKEN: 'GB_TOKEN', frequency: ['last_year']}"
           dbt run --model silver__github_activity
