--- a/models/sources.yml
+++ b/models/sources.yml
@@ -18,6 +18,11 @@ sources:
       - name: ez_current_balances
       - name: ez_dex_swaps
       - name: dim_contracts
+  - name: ethereum_defi
+    database: ethereum
+    schema: defi
+    tables:
+      - name: ez_dex_swaps
   - name: ethereum_silver
     database: ethereum
     schema: silver
@@ -80,6 +85,12 @@ sources:
     tables:
       - name: fact_token_transfers
       - name: fact_traces
+      - name: dim_contracts
+  - name: arbitrum_defi
+    database: arbitrum
+    schema: defi
+    tables:
+      - name: ez_dex_swaps
   - name: avalanche_silver
     database: avalanche
     schema: silver
@@ -97,6 +108,12 @@ sources:
     tables:
       - name: fact_token_transfers
       - name: fact_traces
+      - name: dim_contracts
+  - name: avalanche_defi
+    database: avalanche
+    schema: defi
+    tables:
+      - name: ez_dex_swaps
   - name: polygon_silver
     database: polygon
     schema: silver
@@ -114,6 +131,12 @@ sources:
     tables:
       - name: fact_token_transfers
       - name: fact_traces
+      - name: dim_contracts
+  - name: polygon_defi
+    database: polygon
+    schema: defi
+    tables:
+      - name: ez_dex_swaps
   - name: optimism_silver
     database: optimism
     schema: silver
@@ -131,6 +154,12 @@ sources:
     tables:
       - name: fact_token_transfers
       - name: fact_traces
+      - name: dim_contracts
+  - name: optimism_defi
+    database: optimism
+    schema: defi
+    tables:
+      - name: ez_dex_swaps
   - name: bsc_silver
     database: bsc
     schema: silver
@@ -148,6 +177,12 @@ sources:
     tables:
       - name: fact_token_transfers
       - name: fact_traces
+      - name: dim_contracts
+  - name: bsc_defi
+    database: bsc
+    schema: defi
+    tables:
+      - name: ez_dex_swaps
   - name: thorchain
     database: flipside_prod_db
     schema: thorchain
@@ -171,11 +206,22 @@ sources:
     tables:
       - name: fact_transfers
       - name: fact_swaps
+      - name: dim_tokens
+  - name: solana_defi
+    database: solana
+    schema: core
+    tables:
+      - name: fact_swaps
   - name: near_core
     database: near
     schema: core
     tables:
       - name: fact_transfers
+      - name: ez_dex_swaps
+  - name: near_defi
+    database: near
+    schema: defi
+    tables:
       - name: ez_dex_swaps
   - name: near_silver
     database: near
@@ -200,6 +246,12 @@ sources:
       - name: fact_transactions
       - name: fact_transfers
       - name: fact_validators
+      - name: dim_tokens
+  - name: osmosis_defi
+    database: osmosis
+    schema: defi
+    tables:
+      - name: fact_swaps
   - name: axelar_core
     database: axelar
     schema: core
@@ -376,6 +428,16 @@ sources:
     tables:
       - name: complete_dex_swaps
       - name: complete_dex_liquidity_pools
+  - name: base_core
+    database: base
+    schema: core
+    tables:
+      - name: dim_contracts
+  - name: base_defi
+    database: base
+    schema: defi
+    tables: 
+      - name: ez_dex_swaps
   - name: gnosis_silver
     database: gnosis
     schema: silver
@@ -390,6 +452,16 @@ sources:
     tables:
       - name: complete_dex_swaps
       - name: complete_dex_liquidity_pools
+  - name: gnosis_core
+    database: gnosis
+    schema: core
+    tables:
+      - name: dim_contracts
+  - name: gnosis_defi
+    database: gnosis
+    schema: defi
+    tables:
+      - name: ez_dex_swaps
   - name: gnosis_observ
     database: gnosis
     schema: silver_observability
