--- a/packages.yml
+++ b/packages.yml
@@ -4,4 +4,6 @@ packages:
   - package: dbt-labs/dbt_external_tables
     version: 0.8.0
   - package: dbt-labs/dbt_utils
-    version: 0.9.2
+    version: 1.0.0
+  - git: https://github.com/FlipsideCrypto/fsc-utils.git
+    revision: "v1.3.0"
