--- a/models/sources.yml
+++ b/models/sources.yml
@@ -49,6 +49,7 @@ sources:
     schema: core
     tables:
       - name: address_labels
+      - name: dim_labels
   - name: ethereum_silver_nft
     database: ethereum
     schema: silver_nft
