--- a/models/silver/labels/silver__deposit_wallets.yml
+++ b/models/silver/labels/silver__deposit_wallets.yml
@@ -27,7 +27,7 @@ models:
         tests:
           - not_null
           - dbt_expectations.expect_column_values_to_be_in_set:
-              value_set: ['flotsam', 'nft', 'defi', 'dex', 'cex', 'dapp', 'token', 'operator', 'layer2', 'chadmin', 'games']
+              value_set: ['flotsam', 'nft', 'defi', 'dex', 'cex', 'dapp', 'token', 'operator', 'layer2', 'chadmin', 'games', 'bridge']
       - name: label_subtype
         description: A sub-category nested within label type providing further detail
         tests:
