--- a/models/silver/labels/silver__contract_autolabels.yml
+++ b/models/silver/labels/silver__contract_autolabels.yml
@@ -42,7 +42,7 @@ models:
           - not_null
           - dbt_expectations.expect_column_values_to_match_regex:
               regex: 0[xX][0-9a-fA-F]+
-              where: BLOCKCHAIN in ('ethereum','polygon', 'moonriver', 'avalanche', 'bittorrent', 'cronos', 'fantom', 'arbitrum', 'aurora')
+              where: BLOCKCHAIN in ('ethereum','polygon', 'moonriver', 'avalanche', 'bittorrent', 'cronos', 'fantom', 'arbitrum', 'aurora', 'base')
               enabled: False # Kafka issues being fixed - can't delete labels
           - dbt_expectations.expect_column_values_to_match_regex:
               regex: terra[0-9a-z]{39,39}
