--- a/.github/workflows/dbt_dev_contributors_weekly.yml
+++ b/.github/workflows/dbt_dev_contributors_weekly.yml
@@ -4,7 +4,7 @@ run-name: dbt_dev_activity_daily_weekly
 on:
   workflow_dispatch:
   schedule:
-    - cron: "10 * * * 0" # 10 minutes past the hour, every hour, on Saturday
+    - cron: "0 0,5,10,15,20 * * 4" # At 00:00, 05:00, 10:00, 15:00, and 20:00 on Thursday
 
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
