fix bad refs (#217)
* fix bad refs

* remove old sources

--- a/models/sources.yml
+++ b/models/sources.yml
@@ -255,11 +255,15 @@ sources:
     schema: core
     tables:
       - name: fact_blocks
-      - name: fact_governance_votes
       - name: fact_transactions
       - name: fact_transfers
-      - name: fact_validators
       - name: dim_tokens
+  - name: osmosis_gov
+    database: osmosis
+    schema: gov
+    tables:
+      - name: fact_governance_votes
+      - name: fact_validators
   - name: osmosis_defi
     database: osmosis
     schema: defi
@@ -270,18 +274,26 @@ sources:
     schema: core
     tables:
       - name: fact_blocks
-      - name: fact_governance_votes
       - name: fact_transactions
       - name: fact_transfers
+  - name: axelar_gov
+    database: axelar
+    schema: gov
+    tables:
+      - name: fact_governance_votes
       - name: fact_validators
   - name: cosmos_core
     database: cosmos
     schema: core
     tables:
       - name: fact_blocks
-      - name: fact_governance_votes
       - name: fact_transactions
       - name: fact_transfers
+  - name: cosmos_gov
+    database: cosmos
+    schema: gov
+    tables:
+      - name: fact_governance_votes
       - name: fact_validators
   - name: bronze_streamline
     database: streamline
