--- a/.github/workflows/dbt_activity_yearly.yml
+++ b/.github/workflows/dbt_activity_yearly.yml
@@ -1,10 +1,10 @@
-name: dbt_dev_activity_daily_weekly
-run-name: dbt_dev_activity_daily_weekly
+name: dbt_activity_yearly
+run-name: dbt_activity_yearly
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0,5,10,15,20 * * 6" # At 00:00, 05:00, 10:00, 15:00, and 20:00 on Thursday
+    - cron: "0 0 1 1 *" # At 00:00 on day-of-month 1 in January
 
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
@@ -36,5 +36,5 @@ jobs:
 
       - name: Run DBT Jobs
         run: |
-          dbt run-operation get_github_repo_data --args "{GITHUB_TOKEN: 'GB_TOKEN', frequency: ['core']}"
+          dbt run-operation get_github_repo_data --args "{GITHUB_TOKEN: 'GB_TOKEN', frequency: ['last_year']}"
           dbt run --model silver__github_activity
