append new cols setting

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -39,6 +39,7 @@ models:
   +persist_docs:
     relation: true
     columns: true
+  +on_schema_change: "append_new_columns"
 
 # In this example config, we tell dbt to build all models in the example/ directory
 # as tables. These settings can be overridden in the individual model files
