--- a/models/gold/core/core__dim_evm_event_abis.yml
+++ b/models/gold/core/core__dim_evm_event_abis.yml
@@ -20,3 +20,9 @@ models:
         description: The block number of the creation of the contract containing the event. This could be from a proxy or an implementation.
       - name: END_BLOCK
         description: The block number before a similar event was created in the contract. This could be from a proxy or an implementation.
+      - name: DIM_EVM_EVENT_ABIS_ID
+        description: '{{ doc("pk") }}'   
+      - name: INSERTED_TIMESTAMP
+        description: '{{ doc("inserted_timestamp") }}'   
+      - name: MODIFIED_TIMESTAMP
+        description: '{{ doc("modified_timestamp") }}' 
