--- a/models/sources.yml
+++ b/models/sources.yml
@@ -577,3 +577,9 @@ sources:
     schema: core
     tables:
       - name: dim_tokens
+  - name: aptos_observ
+    database: aptos
+    schema: silver_observability
+    tables: 
+      - name: blocks_completeness
+      - name: transactions_completeness
