fix/verify uniqueness core

--- a/models/gold/core/core__dim_contracts.yml
+++ b/models/gold/core/core__dim_contracts.yml
@@ -18,6 +18,8 @@ models:
         description: The corresponding blockchain for contract details.
       - name: DIM_CONTRACTS_ID
         description: '{{ doc("pk") }}'   
+        tests:
+          - unique
       - name: INSERTED_TIMESTAMP
         description: '{{ doc("inserted_timestamp") }}'   
       - name: MODIFIED_TIMESTAMP
