--- a/models/gold/core/core__dim_labels.yml
+++ b/models/gold/core/core__dim_labels.yml
@@ -51,6 +51,8 @@ models:
               where: BLOCKCHAIN = 'algorand'
       - name: DIM_LABELS_ID
         description: '{{ doc("pk") }}'   
+        tests:
+          - unique
       - name: INSERTED_TIMESTAMP
         description: '{{ doc("inserted_timestamp") }}'   
       - name: MODIFIED_TIMESTAMP
