--- a/models/gold/cosmos/cosmos__dim_base_address.yml
+++ b/models/gold/cosmos/cosmos__dim_base_address.yml
@@ -18,3 +18,11 @@ models:
         description: The MAX block_timestamp where this address was found on a tx_from address or part of a transfer
         tests:
           - dbt_expectations.expect_column_to_exist
+      - name: DIM_BASE_ADDRESS_ID
+        description: '{{ doc("pk") }}'   
+        tests:
+          - unique
+      - name: INSERTED_TIMESTAMP
+        description: '{{ doc("inserted_timestamp") }}'   
+      - name: MODIFIED_TIMESTAMP
+        description: '{{ doc("modified_timestamp") }}' 
