--- a/models/gold/cosmos/cosmos__fact_blocks.yml
+++ b/models/gold/cosmos/cosmos__fact_blocks.yml
@@ -35,3 +35,11 @@ models:
         description: "{{ doc('validator_hash') }}"
         tests: 
           - dbt_expectations.expect_column_to_exist
+      - name: FACT_BLOCKS_ID
+        description: '{{ doc("pk") }}'   
+        tests:
+          - unique
+      - name: INSERTED_TIMESTAMP
+        description: '{{ doc("inserted_timestamp") }}'   
+      - name: MODIFIED_TIMESTAMP
+        description: '{{ doc("modified_timestamp") }}' 
