--- a/models/gold/cosmos/cosmos__fact_governance_votes.yml
+++ b/models/gold/cosmos/cosmos__fact_governance_votes.yml
@@ -38,3 +38,11 @@ models:
         description: "{{ doc('memo') }}"
         tests: 
           - dbt_expectations.expect_column_to_exist
+      - name: FACT_GOVERNANCE_VOTES_ID
+        description: '{{ doc("pk") }}'   
+        tests:
+          - unique
+      - name: INSERTED_TIMESTAMP
+        description: '{{ doc("inserted_timestamp") }}'   
+      - name: MODIFIED_TIMESTAMP
+        description: '{{ doc("modified_timestamp") }}' 
