--- a/models/gold/cosmos/cosmos__fact_transactions.yml
+++ b/models/gold/cosmos/cosmos__fact_transactions.yml
@@ -65,3 +65,11 @@ models:
         description: "The underlying json from the messages or events within the transactions"
         tests: 
           - dbt_expectations.expect_column_to_exist
+      - name: FACT_TRANSACTIONS_ID
+        description: '{{ doc("pk") }}'   
+        tests:
+          - unique
+      - name: INSERTED_TIMESTAMP
+        description: '{{ doc("inserted_timestamp") }}'   
+      - name: MODIFIED_TIMESTAMP
+        description: '{{ doc("modified_timestamp") }}' 
