--- a/models/gold/defi/defi__fact_dex_swaps.yml
+++ b/models/gold/defi/defi__fact_dex_swaps.yml
@@ -47,3 +47,12 @@ models:
       - name: _LOG_ID
         tests:
           - dbt_expectations.expect_column_to_exist
+      - name: FACT_DEX_SWAPS_ID
+        description: '{{ doc("pk") }}'   
+        tests:
+          - unique
+      - name: INSERTED_TIMESTAMP
+        description: '{{ doc("inserted_timestamp") }}'   
+      - name: MODIFIED_TIMESTAMP
+        description: '{{ doc("modified_timestamp") }}' 
+      
