--- a/models/gold/price/price__ez_asset_metadata.yml
+++ b/models/gold/price/price__ez_asset_metadata.yml
@@ -21,4 +21,12 @@ models:
         description: The platform where this asset has a token address.
       - name: DECIMALS
         description: The number of decimal places the token needs adjusted where token values exist.
+      - name: EZ_ASSET_METADATA_ID
+        description: '{{ doc("pk") }}'   
+        tests:
+          - unique
+      - name: INSERTED_TIMESTAMP
+        description: '{{ doc("inserted_timestamp") }}'   
+      - name: MODIFIED_TIMESTAMP
+        description: '{{ doc("modified_timestamp") }}' 
       
