--- a/models/gold/price/price__ez_hourly_token_prices.yml
+++ b/models/gold/price/price__ez_hourly_token_prices.yml
@@ -22,3 +22,11 @@ models:
         description: Blockchain, Network, or Platform the token price is recorded on.
       - name: PRICE
         description: Closing price of the recorded hour in USD
+      - name: EZ_HOURLY_TOKEN_PRICES_ID
+        description: '{{ doc("pk") }}'   
+        tests:
+          - unique
+      - name: INSERTED_TIMESTAMP
+        description: '{{ doc("inserted_timestamp") }}'   
+      - name: MODIFIED_TIMESTAMP
+        description: '{{ doc("modified_timestamp") }}' 
