--- a/.github/workflows/dbt_run_adhoc.yml
+++ b/.github/workflows/dbt_run_adhoc.yml
@@ -41,21 +41,11 @@ env:
   UPDATE_UDFS_AND_SPS: False
 
 jobs:
-  echo_role:
-    runs-on: ubuntu-latest
-    environment:
-      name: workflow_prod
-    steps:
-      - name: Echo ROle
-        run: echo $ROLE
-  
-
-# jobs:
-#   called_workflow_template:
-#     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
-#     with:
-#       dbt_command: ${{ inputs.dbt_command }}
-#       environment: workflow_${{ inputs.environment }}
-#       warehouse: ${{ inputs.warehouse }}
-#     secrets: inherit 
+  called_workflow_template:
+    uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
+    with:
+      dbt_command: ${{ inputs.dbt_command }}
+      environment: workflow_${{ inputs.environment }}
+      warehouse: ${{ inputs.warehouse }}
+    secrets: inherit 
   
