--- a/.github/workflows/dbt_run_adhoc.yml
+++ b/.github/workflows/dbt_run_adhoc.yml
@@ -45,7 +45,7 @@ env:
   WAREHOUSE: "${{ inputs.WAREHOUSE }}"
   SCHEMA: "${{ vars.SCHEMA }}"
   UPDATE_UDFS_AND_SPS: ${{ inputs.update_udfs }}
-  STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES: False
+  STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES: True
 
 
 jobs:
