--- a/.github/workflows/dbt_run_adhoc.yml
+++ b/.github/workflows/dbt_run_adhoc.yml
@@ -45,24 +45,24 @@ env:
   WAREHOUSE: "${{ inputs.WAREHOUSE }}"
   SCHEMA: "${{ vars.SCHEMA }}"
   UPDATE_UDFS_AND_SPS: ${{ inputs.update_udfs }}
-  STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES: True
+  STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES: "True"
 
 
-# jobs:
-#   called_workflow_template:
-#     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
-#     with:
-#       dbt_command: ${{ inputs.dbt_command }}
-#       environment: workflow_${{ inputs.environment }}
-#       warehouse: ${{ inputs.warehouse }}
-#     secrets: inherit 
-  
 jobs:
-  dbt:
-    runs-on: ubuntu-latest
-    environment:
-      name: workflow_dev
-    steps:
+  called_workflow_template:
+    uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
+    with:
+      dbt_command: ${{ inputs.dbt_command }}
+      environment: workflow_${{ inputs.environment }}
+      warehouse: ${{ inputs.warehouse }}
+    secrets: inherit 
+  
+# jobs:
+#   dbt:
+#     runs-on: ubuntu-latest
+#     environment:
+#       name: workflow_dev
+#     steps:
 
-      - name: Echo Envar
-        run: echo $STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES
+#       - name: Echo Envar
+#         run: echo $STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES
