--- a/.github/workflows/dbt_run_streamline_coin_gecko_market_chart_backfill.yml
+++ b/.github/workflows/dbt_run_streamline_coin_gecko_market_chart_backfill.yml
@@ -4,7 +4,7 @@ run-name: dbt_run_streamline_coin_gecko_market_chart_backfill
 on:
   workflow_dispatch:
   schedule:
-    - cron: '15 * * * *'
+    - cron: '*/20 * * * *'
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
@@ -17,8 +17,9 @@ env:
   DATABASE: "${{ vars.DATABASE }}"
   WAREHOUSE: "${{ vars.WAREHOUSE }}"
   SCHEMA: "${{ vars.SCHEMA }}"
-  STREAMLINE_INVOKE_STREAMS: true
-  STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES: false
+  STREAMLINE_INVOKE_STREAMS: "True"
+  STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES: "False"
+  UPDATE_UDFS_AND_SPS: "False"
 
 
 jobs:
