--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -48,3 +48,4 @@ vars:
   "dbt_date:time_zone": GMT
   STREAMLINE_INVOKE_STREAMS: False
   STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES: False
+  UPDATE_UDFS_AND_SPS: False
