Stream 346 coingecko backfill (#224)
* prices udf success

* removed unused make directives

* removed unussed ohlc udf

* added CTE to generate tokens per chain

* generating time spine from dim_dates

* add dim_date ref()

* added uid filter to runtime cte

* added generic get_prices make directive

* added uid as unique key to complete_get_prices

* removed platform specific get prices model

* removed platform filter for get_prices_history

* fixed udf ponter for get prices

* added backfill gha

* fixed gha dbt command

* add  flag

* add role echo

* revert adhoc run roles echo

* added input type to adhoc run gha

* set use external dev tables

* cache deps

* revert cache

* text STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES envar

* fix envar capitalization

* echo vars

* revert var echo

* set update udfs to false for backfill gha

* moved UPDATE_UDFS_AND_SPS to dbt_project.yml

* update to use UID

* partition by uid

* added crossjoin uid to runtimes cte

* complete / runtimes

* use bronze view

* added udf params | added erro exclusion

* SO and cluster

* added prices backfill tag | renamed complete model

* pre-pended streamline to tags

* renamed concise tags

* renamed sl prices_history model | added appropriate tags to gha

---------

Co-authored-by: shah <info@shahnewazkhan.ca>
Co-authored-by: Austin <austin@flipsidecrypto.com>

--- a/.github/workflows/dbt_run_adhoc.yml
+++ b/.github/workflows/dbt_run_adhoc.yml
@@ -26,6 +26,12 @@ on:
         type: string
         description: 'DBT Run Command'
         required: true
+      update_udfs:
+          type: string 
+          description: Boolean to control updating UDFs and Stored Procedures
+          required: true
+          default: 'False'
+        
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
@@ -38,6 +44,8 @@ env:
   DATABASE: "${{ vars.DATABASE }}"
   WAREHOUSE: "${{ inputs.WAREHOUSE }}"
   SCHEMA: "${{ vars.SCHEMA }}"
+  STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES: "True"
+
 
 jobs:
   called_workflow_template:
@@ -47,4 +55,3 @@ jobs:
       environment: workflow_${{ inputs.environment }}
       warehouse: ${{ inputs.warehouse }}
     secrets: inherit 
-  
