--- a/.github/workflows/dbt_run_streamline_coin_gecko_market_chart_backfill.yml
+++ b/.github/workflows/dbt_run_streamline_coin_gecko_market_chart_backfill.yml
@@ -4,7 +4,7 @@ run-name: dbt_run_streamline_coin_gecko_market_chart_backfill
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/30 * * * *'
+      - cron: '0 1 * * *'  
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
