--- a/models/sources.yml
+++ b/models/sources.yml
@@ -581,6 +581,7 @@ sources:
     tables:
       - name: dim_tokens
       - name: fact_transfers
+      - name: ez_native_transfers
   - name: aptos_observ
     database: aptos
     schema: silver_observability
