--- a/models/gold/defi/defi__ez_dex_swaps.yml
+++ b/models/gold/defi/defi__ez_dex_swaps.yml
@@ -1,11 +1,10 @@
 version: 2
 models:
   - name: defi__ez_dex_swaps
-    description: A comprehensive fact table holding blockchain and platform specific decentralized exchange swaps. This table contains dex swaps from Ethereum, Optimism, Polygon, BSC, Avalanche, Osmosis, Solana, Near, BASE, Gnosis, and Arbitrum.
+    description: A comprehensive convenience table holding blockchain and platform specific decentralized exchange swaps. This table contains dex swaps from Arbitrum, Avalanche, Base, BSC, Gnosis, Ethereum, Optimism, Polygon, Osmosis, Solana, and Near.
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
-            - BLOCKCHAIN
             - _LOG_ID
     columns:
       - name: BLOCKCHAIN
@@ -25,7 +24,11 @@ models:
         tests:
           - dbt_expectations.expect_column_to_exist
       - name: TX_HASH
-        description: Transaction hash is a unique 66-character identifier that is generated when a transaction is executed. 
+        description: Transaction hash is a unique identifier that is generated when a transaction is executed. 
+        tests:
+          - dbt_expectations.expect_column_to_exist
+      - name: CONTRACT_ADDRESS
+        description: The contract address interacted with for the swap, typically the liquidity pool or router address, where applicable. Value may be NULL for certain chains, such as Osmosis and Near, where records occur at a different granularity such as one row per transaction rather than one row per event.
         tests:
           - dbt_expectations.expect_column_to_exist
       - name: TRADER
