--- a/models/silver/labels/silver__labels_combined.yml
+++ b/models/silver/labels/silver__labels_combined.yml
@@ -49,7 +49,7 @@ models:
           - dbt_expectations.expect_column_value_lengths_to_equal:
               value: 58
               where: BLOCKCHAIN = 'algorand'
-      - name: DIM_LABELS_ID
+      - name: LABELS_COMBINED_ID
         description: '{{ doc("pk") }}'   
         tests:
           - unique
