--- a/models/sources.yml
+++ b/models/sources.yml
@@ -237,6 +237,7 @@ sources:
     schema: defi
     tables:
       - name: fact_swaps
+      - name: fact_bridge_activity
   - name: near_core
     database: near
     schema: core
