--- a/models/sources.yml
+++ b/models/sources.yml
@@ -237,6 +237,7 @@ sources:
     schema: defi
     tables:
       - name: fact_swaps
+      - name: fact_bridge_activity
   - name: near_core
     database: near
     schema: core
@@ -597,3 +598,43 @@ sources:
     tables: 
       - name: blocks_completeness
       - name: transactions_completeness
+  - name: ethereum_stats
+    database: ethereum
+    schema: stats
+    tables:
+      - name: ez_core_metrics_hourly
+  - name: optimism_stats
+    database: optimism
+    schema: stats
+    tables:
+      - name: ez_core_metrics_hourly
+  - name: arbitrum_stats
+    database: arbitrum
+    schema: stats
+    tables:
+      - name: ez_core_metrics_hourly
+  - name: bsc_stats
+    database: bsc
+    schema: stats
+    tables:
+      - name: ez_core_metrics_hourly
+  - name: polygon_stats
+    database: polygon
+    schema: stats
+    tables:
+      - name: ez_core_metrics_hourly
+  - name: base_stats
+    database: base
+    schema: stats
+    tables:
+      - name: ez_core_metrics_hourly
+  - name: gnosis_stats
+    database: gnosis
+    schema: stats
+    tables:
+      - name: ez_core_metrics_hourly
+  - name: avalanche_stats
+    database: avalanche
+    schema: stats
+    tables:
+      - name: ez_core_metrics_hourly
