--- a/models/silver/tags/Thorchain/silver__tags_thor_dex_user.yml
+++ b/models/silver/tags/Thorchain/silver__tags_thor_dex_user.yml
@@ -5,6 +5,7 @@ models:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
             - ADDRESS
+            - BLOCKCHAIN
     columns:
       - name: ADDRESS
         tests:
