--- a/models/silver/stats/silver_stats__core_metrics_hourly.yml
+++ b/models/silver/stats/silver_stats__core_metrics_hourly.yml
@@ -32,16 +32,10 @@ models:
       - name: TRANSACTION_COUNT_FAILED
         tests:
           - not_null
-      - name: UNIQUE_FROM_COUNT
+      - name: UNIQUE_INITIATOR_COUNT
         tests:
           - not_null
-      - name: UNIQUE_TO_COUNT
-        tests:
-          - not_null
-      - name: TOTAL_FEES_ETH
-        tests:
-          - not_null
-      - name: TOTAL_FEES_USD
+      - name: TOTAL_FEES_NATIVE
         tests:
           - not_null
       - name: CORE_METRICS_HOURLY_ID
