--- a/.github/workflows/dbt_run_daily.yml
+++ b/.github/workflows/dbt_run_daily.yml
@@ -23,7 +23,7 @@ jobs:
   called_workflow_template:
     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
-      dbt_command: dbt run -s "crosschain_models,./models" --exclude models/silver/hourly_prices+ models/bronze/bronze_api models/silver/utilities models/silver/observability/silver__data_delay.sql
+      dbt_command: dbt run -s "crosschain_models,./models" --exclude models/silver/hourly_prices+ models/bronze/bronze_api models/silver/utilities models/silver/observability/silver__data_delay.sql models/silver/defi
       environment: workflow_prod
       warehouse: ${{ vars.WAREHOUSE }}
     secrets: inherit 
