--- a/models/silver/defi/silver__complete_bridge_activity.yml
+++ b/models/silver/defi/silver__complete_bridge_activity.yml
@@ -5,7 +5,7 @@ models:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
             - COMPLETE_BRIDGE_ACTIVITY_ID
-            
+
     columns:
       - name: BLOCKCHAIN
         tests:
@@ -46,7 +46,7 @@ models:
       - name: AMOUNT_RAW
         tests:
           - dbt_expectations.expect_column_to_exist
-      - name: FACT_BRIDGE_ACTIVITY_ID
+      - name: COMPLETE_BRIDGE_ACTIVITY_ID
         tests:
           - not_null
       - name: INSERTED_TIMESTAMP
