--- a/models/sources.yml
+++ b/models/sources.yml
@@ -11,6 +11,7 @@ sources:
     schema: core
     tables:
       - name: fact_transactions
+      - name: ez_native_transfers
       - name: fact_token_transfers
       - name: fact_traces
       - name: ez_current_balances
@@ -101,6 +102,7 @@ sources:
     schema: core
     tables:
       - name: fact_token_transfers
+      - name: ez_native_transfers
       - name: fact_traces
       - name: dim_contracts
   - name: arbitrum_defi
@@ -126,6 +128,7 @@ sources:
     schema: core
     tables:
       - name: fact_token_transfers
+      - name: ez_native_transfers
       - name: fact_traces
       - name: dim_contracts
   - name: avalanche_defi
@@ -151,6 +154,7 @@ sources:
     schema: core
     tables:
       - name: fact_token_transfers
+      - name: ez_native_transfers
       - name: fact_traces
       - name: dim_contracts
   - name: polygon_defi
@@ -176,6 +180,7 @@ sources:
     schema: core
     tables:
       - name: fact_token_transfers
+      - name: ez_native_transfers
       - name: fact_traces
       - name: dim_contracts
   - name: optimism_defi
@@ -201,6 +206,7 @@ sources:
     schema: core
     tables:
       - name: fact_token_transfers
+      - name: ez_native_transfers
       - name: fact_traces
       - name: dim_contracts
   - name: bsc_defi
@@ -480,6 +486,7 @@ sources:
     schema: core
     tables:
       - name: fact_token_transfers
+      - name: ez_native_transfers
       - name: fact_traces
       - name: dim_contracts
   - name: base_defi
